k8s-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-password-service
spec:
  selector:
    app: auth-password-service
  ports:
    - port: 80
      targetPort: 8080
