k8s-auth/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: auth-password-service
spec:
  to:
    kind: Service
    name: auth-password-service
  port:
    targetPort: http
  tls:
    termination: edge
